src/routes/global.css
:root {
	--black: #000;
	--white: #fff;
	--border-gray: #eee;
	--accent: #E34F26;
	--text-color:rgba(0,0,0,0.77);
}

html, body {
	padding: 0;
	margin: 0;
	font-size: 62.5%;
	box-sizing: border-box;
	overflow-x: hidden;
}

* {
	position: relative;
	box-sizing: border-box;
}

@font-face {
  font-family: 'Heming';
  src: url('/fonts/heming-variable.woff2') format('woff2');
/*      font-weight: 100;*/
  font-style: normal;
}

h1,h2,h3,h4,a {
	font-family: 'Heming';
	cursor: pointer;
}

h2 {
	font-size: 3.2rem;
	color: var(--black) !important;
	line-height: 120%;
}

h3 {
	font-size: 2.4rem;
	color: var(--black) !important;
}
/*a:-webkit-any-link{
	color: none;
}*/

@media(max-width: 768px) {
	html,body {
		overflow-x: hidden;
	}
}

